force-app/main/default/objects/Form_Phrase_Translation__c/Form_Phrase_Translation__c.object-meta.xml
<CustomObject>
    <description>Translation of a phrase into a particular language</description>
    <label>Form Phrase Translation</label>
    <nameField>
        <displayFormat>PHRT-{0000}</displayFormat>
        <label>Form Phrase Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Phrase Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>