force-app/main/default/objects/Form_Phrase_Translation__c/fields/Form_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The phrase for which this is a translation</description>
    <inlineHelpText>The phrase for which this is a translation</inlineHelpText>
    <label>Form Phrase</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Form Phrase Translations</relationshipLabel>
    <relationshipName>Form_Phrase_Translations</relationshipName>
    <type>Lookup</type>
</CustomField>