force-app/main/default/objects/Form_Phrase_Translation__c/fields/Revise__c.field-meta.xml
<CustomField>
    <fullName>Revise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this phrase translation needs revision</description>
    <inlineHelpText>Checked if this phrase translation needs revision</inlineHelpText>
    <label>Revise</label>
    <type>Checkbox</type>
</CustomField>