force-app/main/default/objects/Form_Phrase_Translation__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>The text for this phrase in the given language</description>
    <inlineHelpText>The text for this phrase in the given language</inlineHelpText>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>