force-app/main/default/objects/Form_Phrase_Translation__c/fields/Text_in_English__c.field-meta.xml
<CustomField>
    <fullName>Text_in_English__c</fullName>
    <description>The text of this phrase in English</description>
    <inlineHelpText>The text of this phrase in English</inlineHelpText>
    <label>Text in English</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>