force-app/main/default/objects/Form_Phrase_Translation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_Phrase__c</columns>
    <columns>Revise__c</columns>
    <columns>Language__c</columns>
    <columns>Text__c</columns>
    <columns>Text_in_English__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>