force-app/main/default/objects/Form_Phrase_Translation__c/listViews/By_Mira.listView-meta.xml
<ListView>
    <fullName>By_Mira</fullName>
    <columns>NAME</columns>
    <columns>Form_Phrase__c</columns>
    <columns>Revise__c</columns>
    <columns>Language__c</columns>
    <columns>Text__c</columns>
    <columns>Text_in_English__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Mira</value>
    </filters>
    <label>By Mira</label>
</ListView>