force-app/main/default/objects/Form_Phrase_Translation__c/listViews/Spanish_Phrase_Translations.listView-meta.xml
<ListView>
    <fullName>Spanish_Phrase_Translations</fullName>
    <columns>NAME</columns>
    <columns>Form_Phrase__c</columns>
    <columns>Revise__c</columns>
    <columns>Language__c</columns>
    <columns>Text__c</columns>
    <columns>Text_in_English__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>Spanish</value>
    </filters>
    <label>Phrase Translations SPANISH</label>
</ListView>